--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pradeepkumar-07.github.io/Weather-App-React",
+  "homepage": "http://Tekumudiharishkumar.github.io/Weather-App-React",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
